--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "md-links",
+  "name": "@dsandovalm/md-links",
   "version": "0.1.0",
   "description": "Modulo de node que permite ver y validar el estado de los links presentes en un archivo .md",
   "main": "index.js",
@@ -25,11 +25,11 @@
     "jest": "^27.0.4",
     "minimist": "^1.2.5",
     "node-fetch": "^2.6.1",
-    "path": "^0.12.7",
+    "path": "^0.12.7"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/dsandovalm/BOG002-md-links.git"
+    "url": "git+dsandovalm/BOG002-md-links.git"
   },
   "bugs": {
     "url": "https://github.com/dsandovalm/BOG002-md-links/issues"
